# AndroidTrain

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  native-lib.cpp
buildSrc/: build.gradle
buildSrc/src/main/java/: JarErrorFixPlugin.java
carapp/: build.gradle
carapp/src/main/: AndroidManifest.xml
carapp/src/main/assets/: fshader.fsh  vshader.vsh
carapp/src/main/debug/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/kstudy/ffmpeglib/: ExampleInstrumentedTest.kt
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JNICallbakcHelper.cpp  JNICallbakcHelper.h  SimplePlayer.cpp  SimplePlayer.h  VideoChannel.cpp  VideoChannel.h  ffmpeg_cmd.cpp  ffmpeg_play.cpp  tools_log.h
ffmpeglib/src/main/cpp/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffprobe.c  ffprobe.h
ffmpeglib/src/main/cpp/include/: config.h
ffmpeglib/src/main/cpp/include/libavcodec/: mathops.h
ffmpeglib/src/main/java/com/kstudy/ffmpeglib/: FFmpegCmd.java
ffmpeglib/src/main/java/com/kstudy/ffmpeglib/player/: SimplePlayer.java
ffmpeglib/src/main/java/com/kstudy/ffmpeglib/utils/: FFmpegCmdUtils.java
ffmpeglib/src/test/java/com/kstudy/ffmpeglib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ktlib/: build.gradle
monitor/: build.gradle
monitor/src/main/: AndroidManifest.xml
myopengl/: CMakeLists.txt  build.gradle
myopengl/src/androidTest/java/com/kstudy/myopengl/: ExampleInstrumentedTest.kt
myopengl/src/main/: AndroidManifest.xml
myopengl/src/main/cpp/: native-gl.cpp
myopengl/src/main/java/com/kstudy/myopengl/: MyGLSurfaceView.java  MyGlRenderer.java  MyMediaRecorder.java
myopengl/src/main/java/com/kstudy/myopengl/face/: Face.java  FaceTrack.java
myopengl/src/main/java/com/kstudy/myopengl/fliter/: BaseFilter.java  BaseFrameFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java
myopengl/src/main/java/com/kstudy/myopengl/utils/: BufferHelper.java  ShaderHelper.java  TextResourceReader.java  TextureHelper.java
myopengl/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  bigeye_fragment.glsl  camera_fragment.glsl  camera_vertex.glsl
myopengl/src/test/java/com/kstudy/myopengl/: ExampleUnitTest.kt
rtmplib/: build.gradle
rtmplib/src/main/: AndroidManifest.xml
(+119 files in other folders)
